Add menu but not compeletely

--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
 	<link rel="stylesheet" href="cssslider_files/csss_engine1/style.css">
 </head>
 <body>
+	<nav class="navbar">
+		<ul class="navbar__ul">
+			<li class="navbar__list"><a href="#" class="navbar__link">Home</a></li>
+			<li class="navbar__list"><a href="#" class="navbar__link">Features</a></li>
+			<li class="navbar__list"><a href="#" class="navbar__link">FAQs</a></li>
+			<li class="navbar__list"><a href="#" class="navbar__link">Contact</a></li>
+		</ul>
+	</nav>
 	<div class='csslider1 autoplay'>
 		<input name="cs_anchor1" id='cs_slide1_0' type="radio" class='cs_anchor slide' >
 		<input name="cs_anchor1" id='cs_slide1_1' type="radio" class='cs_anchor slide' >
