--- a/index.html
+++ b/index.html
@@ -5,16 +5,17 @@
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="This page will help you to make a diate chart as your health." />
-	<link rel="stylesheet" type="text/css" href="css/stylesheet.css">
+	<link rel="stylesheet" type="text/css" href="css/normalize.css">
 	<link rel="stylesheet" href="cssslider_files/csss_engine1/style.css">
+	<link rel="stylesheet" type="text/css" href="css/stylesheet.css">
 </head>
 <body>
 	<nav class="navbar">
 		<ul class="navbar__ul">
-			<li class="navbar__list"><a href="#" class="navbar__link">Home</a></li>
-			<li class="navbar__list"><a href="#" class="navbar__link">Features</a></li>
-			<li class="navbar__list"><a href="#" class="navbar__link">FAQs</a></li>
-			<li class="navbar__list"><a href="#" class="navbar__link">Contact</a></li>
+			<a class="navbar__link" href="#"><li class="navbar__list">Home</li></a>
+			<a class="navbar__link" href="#"><li class="navbar__list">Features</li></a>
+			<a class="navbar__link" href="#"><li class="navbar__list">FAQs</li></a>
+			<a class="navbar__link" href="#"><li class="navbar__list">Contact</li></a>
 		</ul>
 	</nav>
 	<div class='csslider1 autoplay'>
@@ -137,9 +138,9 @@
 		<div class="footer__container">
 			<p class="footer__rights">&#169; 2015 All rights reserved.</p>
 			<ul class="footer__list">
-				<li class="footer__list-element"><a href="#" class="footer__link">Terms</a></li>
-				<li class="footer__list-element"><a href="#" class="footer__link">Privacy</a></li>
-				<li class="footer__list-element"><a href="#" class="footer__link">Copyright</a></li>
+				<li class="footer__list-element"><a  class="footer__link" href="#">Terms</a></li>
+				<li class="footer__list-element"><a  class="footer__link" href="#">Privacy</a></li>
+				<li class="footer__list-element"><a  class="footer__link" href="#">Copyright</a></li>
 			</ul>
 		</div>
 	</footer>
