--- a/index.html
+++ b/index.html
@@ -5,19 +5,24 @@
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="This page will help you to make a diate chart as your health." />
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<link rel="stylesheet" type="text/css" href="css/normalize.css">
 	<link rel="stylesheet" href="cssslider_files/csss_engine1/style.css">
 	<link rel="stylesheet" type="text/css" href="css/stylesheet.css">
+	<link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
 </head>
 <body>
+	<!-- Navbar code -->
 	<nav class="navbar">
 		<ul class="navbar__ul">
-			<a class="navbar__link" href="#"><li class="navbar__list">Home</li></a>
-			<a class="navbar__link" href="#"><li class="navbar__list">Features</li></a>
-			<a class="navbar__link" href="#"><li class="navbar__list">FAQs</li></a>
-			<a class="navbar__link" href="#"><li class="navbar__list">Contact</li></a>
+			<li class="navbar__list"><a class="navbar__link" href="index.html">Home</a></li>
+			<li class="navbar__list"><a class="navbar__link" href="features.html">Features</a></li>
+			<li class="navbar__list"><a class="navbar__link" href="faq.html">FAQs</a></li>
+			<li class="navbar__list"><a class="navbar__link" href="contactus.html">Contact us</a></li>
 		</ul>
+		<a href="#" id="pull">Menu</a>
 	</nav>
+	
 	<div class='csslider1 autoplay'>
 		<input name="cs_anchor1" id='cs_slide1_0' type="radio" class='cs_anchor slide' >
 		<input name="cs_anchor1" id='cs_slide1_1' type="radio" class='cs_anchor slide' >
@@ -136,7 +141,7 @@
 	</div>
 	<footer class="footer">
 		<div class="footer__container">
-			<p class="footer__rights">&#169; 2015 All rights reserved.</p>
+			<p class="footer__rights">Copyright 2015 MeDiat | All Rights Reserved | Designed by SKG</p>
 			<ul class="footer__list">
 				<li class="footer__list-element"><a  class="footer__link" href="#">Terms</a></li>
 				<li class="footer__list-element"><a  class="footer__link" href="#">Privacy</a></li>
