--- a/contactus.html
+++ b/contactus.html
@@ -25,6 +25,7 @@
 		<a href="#" id="pull">Menu</a>
 	</nav>
 
+	<h1 class="contact_header">Contact Us</h1>
 	<!-- Starting of the contact content -->
 	<form class="form">
 		<div class="form__input-div">
@@ -34,6 +35,12 @@
 		<div class="form__input-div">
 			<i class="flaticon-rounded26"></i>
 			<input type = "text" class="form__input" placeholder="Email">
+		</div>
+		<div class="form__input-div">
+			<i class="flaticon-drawing4"></i>
+			<textarea class="form__input form__input--message" name="Message" rows="4" cols="50">
+				
+			</textarea>
 		</div>
 		<button class="submit">Submit</button>
 	</form>
