--- a/contactus.html
+++ b/contactus.html
@@ -7,18 +7,24 @@
 	<meta name="description" content="This page will help you to make a diate chart as your health." />
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<link rel="stylesheet" type="text/css" href="css/normalize.css">
-	<link rel="stylesheet" href="cssslider_files/csss_engine1/style.css">
 	<link rel="stylesheet" type="text/css" href="css/stylesheet.css">
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-	<link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="css/flaticon.css">
 </head>
-<body>
+<body>	
 	<!-- Navbar code -->
 	<nav class="navbar">
 		<ul class="navbar__ul">
 			<li class="navbar__list"><a class="navbar__link" href="index.html">Home</a></li>
-			<li class="navbar__list"><a class="navbar__link" href="features.html">Features</a></li>
+			<li class="navbar__list" id="navbar__subhover"><a class="navbar__link" id="navbar_link" href="features.html">Features</a>
+				<ul class="navbar__submenu">
+					<li class="navbar__submenu_list"><a class="navbar__submenu_link" id="modal_trigger1" href="#modal1">Feature A</a></li>
+					<li class="navbar__submenu_list"><a class="navbar__submenu_link" id="modal_trigger2" href="#modal2">Feature B</a></li>
+					<li class="navbar__submenu_list"><a class="navbar__submenu_link" href="#">Feature C</a></li>
+					<li class="navbar__submenu_list"><a class="navbar__submenu_link" href="#">Feature D</a></li>
+				</ul>
+			</li>
 			<li class="navbar__list"><a class="navbar__link" href="faq.html">FAQs</a></li>
 			<li class="navbar__list"><a class="navbar__link" href="contactus.html">Contact us</a></li>
 		</ul>
@@ -38,12 +44,42 @@
 		</div>
 		<div class="form__input-div">
 			<i class="flaticon-drawing4"></i>
-			<textarea class="form__input form__input--message" name="Message" rows="4" cols="50">
-				
-			</textarea>
+			<input type = "text" class="form__input" placeholder="Messsage">
 		</div>
-		<button class="submit">Submit</button>
+		<button class="btn">Submit</button>
 	</form>
+
+	<!-- Starting of contact -->
+	<section class="contact">
+		<div class="contact__container">
+			<ul class="contact__list">
+				<li class="contact__list_member">
+					<i class="icon icon-map-marker" style="font-size:40px"></i>
+					<p class="contact__list_text" style="margin-top:30px;">
+						91,Navadeep Nagar
+					</p>
+					<p class="contact__list_text">
+						Pavanchakki Road
+					</p>
+					<p class="contact__list_text">
+						Nadiad
+					</p>
+				</li>
+				<li class="contact__list_member">
+					<i class="icon icon-envelope-btl" style="font-size:40px"></i>
+					<p class="contact__list_text" style="margin-top:30px;">
+						gandhiswaraj94@gmail.com
+					</p>
+				</li>
+				<li class="contact__list_member">
+					<i class="icon icon-mobile" style="font-size:40px"></i>
+					<p class="contact__list_text" style="margin-top:30px;">Swaraj Gandhi</p>
+					<p class="contact__list_text">+91 9426478112</p>
+					<p></p>
+				</li>
+			</ul>
+		</div>
+	</section>
 
 	<!-- Starting of the footer-->
 	<footer class="footer">
@@ -53,32 +89,18 @@
 				<li class="footer__list-element"><a  class="footer__link" href="#">Terms</a></li>
 				<li class="footer__list-element"><a  class="footer__link" href="#">Privacy</a></li>
 				<li class="footer__list-element"><a  class="footer__link" href="#">Copyright</a></li>
-			</ul>
+			</ul>			
 		</div>
 	</footer>
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-<script type="text/javascript" src="cssslider_files/csss_engine1/gestures.js"></script>
-<script>
-
-	$(document).ready(function(){
-    $(function() {
-    var pull        = $('#pull');
-        menu        = $('.navbar__ul');
-        menuHeight  = menu.height();
- 
-	    $(pull).on('click', function(e) {
-	        e.preventDefault();
-	        menu.slideToggle();
-	    });
-	});
-
-	$(window).resize(function(){
-    var w = $(window).width();
-    if(w > 320 && menu.is(':hidden')) {
-        menu.removeAttr('style');
-    }
-	});
-	});
+<script type="text/javascript" src="js/jquery.leanModal.min.js"></script>
+<script type="text/javascript">
+  $("#modal_trigger1").leanModal({top : 200, overlay : 0.6, closeButton: ".modal_close" });
+  $("#modal_trigger2").leanModal({top : 200, overlay : 0.6, closeButton: ".modal_close" });
 </script>
+<script src="https://use.fonticons.com/f733972f.js"></script>
+<script type="text/javascript" src="js/classie.js"></script>
+<script type="text/javascript" src="js/home.js"></script>
+<script src="https://use.fonticons.com/f733972f.js"></script>
 </html>
