--- a/faq.html
+++ b/faq.html
@@ -9,18 +9,70 @@
 	<link rel="stylesheet" href="cssslider_files/csss_engine1/style.css">
 	<link rel="stylesheet" type="text/css" href="css/stylesheet.css">
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+	<link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
 </head>
 <body>
 	<!-- Navbar code -->
 	<nav class="navbar">
 		<ul class="navbar__ul">
 			<li class="navbar__list"><a class="navbar__link" href="index.html">Home</a></li>
-			<li class="navbar__list"><a class="navbar__link" href="features.html">Features</a></li>
+			<li class="navbar__list" id="navbar__subhover"><a class="navbar__link" id="navbar_link" href="features.html">Features</a>
+				<ul class="navbar__submenu">
+					<li class="navbar__submenu_list"><a class="navbar__submenu_link" id="modal_trigger1" href="#modal1">Feature A</a></li>
+					<li class="navbar__submenu_list"><a class="navbar__submenu_link" id="modal_trigger2" href="#modal2">Feature B</a></li>
+					<li class="navbar__submenu_list"><a class="navbar__submenu_link" href="#">Feature C</a></li>
+					<li class="navbar__submenu_list"><a class="navbar__submenu_link" href="#">Feature D</a></li>
+				</ul>
+			</li>
 			<li class="navbar__list"><a class="navbar__link" href="faq.html">FAQs</a></li>
 			<li class="navbar__list"><a class="navbar__link" href="contactus.html">Contact us</a></li>
 		</ul>
 		<a href="#" id="pull">Menu</a>
 	</nav>
+
+	<!-- FAQs -->
+
+	<section class="faq">
+      <div class="faq__container">
+        <div class="faq__header">
+          <h1>FREQUENTLY ASKED QUESTIONS</h1>
+        </div>
+        <div class="faq__question">
+            <div id="custom-show-hide-example">
+              <h3 class="faq__questions--header">Lorem ipsum dolor sit amet, consectetur adipiscing elit,</h3>
+              <div class="faq__questions--answer">
+                <p class="faq__question--answer">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+                </p>
+              </div>
+              <h3 class="faq__questions--header">Lorem ipsum dolor sit amet, consectetur adipiscing elit,</h3>
+              <div>
+                <p class="faq__question--answer">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+                </p>
+              </div>
+              <h3 class="faq__questions--header">Lorem ipsum dolor sit amet, consectetur adipiscing elit,</h3>
+              <div>
+                <p class="faq__question--answer">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+                </p>
+              </div>
+              <h3 class="faq__questions--header">Lorem ipsum dolor sit amet, consectetur adipiscing elit,</h3>
+              <div>
+                <p class="faq__question--answer">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+                </p>
+              </div>
+              <h3 class="faq__questions--header">Lorem ipsum dolor sit amet, consectetur adipiscing elit,</h3>
+              <div>
+                <p class="faq__question--answer">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
 		
 	<footer class="footer">
 		<div class="footer__container">
@@ -33,5 +85,24 @@
 		</div>
 	</footer>
 </body>
-<script type="text/javascript" src="cssslider_files/csss_engine1/gestures.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<script type="text/javascript" src="js/jquery.leanModal.min.js"></script>
+<script type="text/javascript">
+  $("#modal_trigger1").leanModal({top : 200, overlay : 0.6, closeButton: ".modal_close" });
+  $("#modal_trigger2").leanModal({top : 200, overlay : 0.6, closeButton: ".modal_close" });
+</script>
+<script src="https://use.fonticons.com/f733972f.js"></script>
+<script type="text/javascript" src="js/classie.js"></script>
+<script type="text/javascript" src="js/home.js"></script>
+<script src="js/jquery.collapse.js"></script>
+<script>
+    new jQueryCollapse($("#custom-show-hide-example"), {
+      open: function() {
+        this.slideDown(150);
+      },
+      close: function() {
+        this.slideUp(150);
+      }
+    });
+</script>
 </html>
