--- a/features.html
+++ b/features.html
@@ -4,18 +4,26 @@
 	<title>MeDiat</title>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="This page will help you to make a diate chart as your health." />
+	<meta name="description" content="This page will help you to make a diate chart as your health."/>
 	<link rel="stylesheet" type="text/css" href="css/normalize.css">
 	<link rel="stylesheet" href="cssslider_files/csss_engine1/style.css">
 	<link rel="stylesheet" type="text/css" href="css/stylesheet.css">
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+	<link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
 </head>
 <body>
-	<!-- Navbar Code -->
+	<!-- Navbar code -->
 	<nav class="navbar">
 		<ul class="navbar__ul">
 			<li class="navbar__list"><a class="navbar__link" href="index.html">Home</a></li>
-			<li class="navbar__list"><a class="navbar__link" href="features.html">Features</a></li>
+			<li class="navbar__list" id="navbar__subhover"><a class="navbar__link" id="navbar_link" href="features.html">Features</a>
+				<ul class="navbar__submenu">
+					<li class="navbar__submenu_list"><a class="navbar__submenu_link" id="modal_trigger1" href="#modal1">Feature A</a></li>
+					<li class="navbar__submenu_list"><a class="navbar__submenu_link" id="modal_trigger2" href="#modal2">Feature B</a></li>
+					<li class="navbar__submenu_list"><a class="navbar__submenu_link" href="#">Feature C</a></li>
+					<li class="navbar__submenu_list"><a class="navbar__submenu_link" href="#">Feature D</a></li>
+				</ul>
+			</li>
 			<li class="navbar__list"><a class="navbar__link" href="faq.html">FAQs</a></li>
 			<li class="navbar__list"><a class="navbar__link" href="contactus.html">Contact us</a></li>
 		</ul>
@@ -33,5 +41,13 @@
 		</div>
 	</footer>
 </body>
-<script type="text/javascript" src="cssslider_files/csss_engine1/gestures.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<script type="text/javascript" src="js/jquery.leanModal.min.js"></script>
+<script type="text/javascript">
+  $("#modal_trigger1").leanModal({top : 200, overlay : 0.6, closeButton: ".modal_close" });
+  $("#modal_trigger2").leanModal({top : 200, overlay : 0.6, closeButton: ".modal_close" });
+</script>
+<script src="https://use.fonticons.com/f733972f.js"></script>
+<script type="text/javascript" src="js/classie.js"></script>
+<script type="text/javascript" src="js/home.js"></script>
 </html>
