--- a/index.html
+++ b/index.html
@@ -7,23 +7,48 @@
 	<meta name="description" content="This page will help you to make a diate chart as your health." />
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<link rel="stylesheet" type="text/css" href="css/normalize.css">
-	<link rel="stylesheet" href="cssslider_files/csss_engine1/style.css">
+	<link rel="stylesheet" href="css_slider_files/csss_engine1/style.css">
 	<link rel="stylesheet" type="text/css" href="css/stylesheet.css">
-	<link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Armata' rel='stylesheet' type='text/css'>
 </head>
 <body>
 	<!-- Navbar code -->
 	<nav class="navbar">
 		<ul class="navbar__ul">
+			<li class="navbar__list" id="logo"><a href="index.html"><h1 class="navbar__logo">MeDiet</h1></a></li>
 			<li class="navbar__list"><a class="navbar__link" href="index.html">Home</a></li>
-			<li class="navbar__list"><a class="navbar__link" href="features.html">Features</a></li>
+			<li class="navbar__list" id="navbar__subhover"><a class="navbar__link" id="navbar_link" href="features.html">Features</a>
+				<ul class="navbar__submenu">
+					<li class="navbar__submenu_list"><a class="navbar__submenu_link" id="modal_trigger1" href="#modal1">Feature A</a></li>
+					<li class="navbar__submenu_list"><a class="navbar__submenu_link" id="modal_trigger2" href="#modal2">Feature B</a></li>
+					<li class="navbar__submenu_list"><a class="navbar__submenu_link" href="#">Feature C</a></li>
+					<li class="navbar__submenu_list"><a class="navbar__submenu_link" href="#">Feature D</a></li>
+				</ul>
+			</li>
 			<li class="navbar__list"><a class="navbar__link" href="faq.html">FAQs</a></li>
 			<li class="navbar__list"><a class="navbar__link" href="contactus.html">Contact us</a></li>
 		</ul>
 		<a href="#" id="pull">Menu</a>
 	</nav>
+
+	<!-- Feature 1 link model -->
+    <div id="modal1" class="popup" style="display:none;">
+      <section class="popup__body">
+        <h1>HELLO FEATURE 1</h1>
+      </section>
+    </div>
+  <!-- End to model box -->
+
+  <!-- Feature 2 link model -->
+    <div id="modal2" class="popup" style="display:none;">
+      <section class="popup__body">
+        <h1>HELLO FEATURE 2</h1>
+      </section>
+    </div>
+  <!-- End to model box -->
 	
-	<div class='csslider1 autoplay'>
+	<div class='csslider1 autoplay '>
 		<input name="cs_anchor1" id='cs_slide1_0' type="radio" class='cs_anchor slide' >
 		<input name="cs_anchor1" id='cs_slide1_1' type="radio" class='cs_anchor slide' >
 		<input name="cs_anchor1" id='cs_slide1_2' type="radio" class='cs_anchor slide' >
@@ -34,27 +59,17 @@
 		<input name="cs_anchor1" id='cs_pause1_2' type="radio" class='cs_anchor pause'>
 		<input name="cs_anchor1" id='cs_pause1_3' type="radio" class='cs_anchor pause'>
 		<ul>
-			<li class="cs_skeleton">
-				<img src="cssslider_files/csss_images1/photo1426200830301372615e4ac54.jpg" style="width: 100%;">
-			</li>
-			<li class='num0 img slide'>
-			 <img src='cssslider_files/csss_images1/photo1426200830301372615e4ac54.jpg' alt='photo-1426200830301-372615e4ac54' title='photo-1426200830301-372615e4ac54' />
-			</li>
-			<li class='num1 img slide'>
-			 <img src='cssslider_files/csss_images1/photo14234836411545411ec9c0ddf.jpg' alt='photo-1423483641154-5411ec9c0ddf' title='photo-1423483641154-5411ec9c0ddf' />
-			</li>
-			<li class='num2 img slide'>
-			 <img src='cssslider_files/csss_images1/photo1421977870504378093748ae6.jpg' alt='photo-1421977870504-378093748ae6' title='photo-1421977870504-378093748ae6' />
-			</li>
-			<li class='num3 img slide'>
-			 <img src='cssslider_files/csss_images1/photo1422310299561e3b8b45d859f.jpg' alt='photo-1422310299561-e3b8b45d859f' title='photo-1422310299561-e3b8b45d859f' />
-			</li>
-		</ul>
+			<li class="cs_skeleton"><img src="css_slider_files/csss_images1/f8b73cpsbk.jpg" style="width: 100%;"></li>
+			<li class='num0 img slide'> <img src='css_slider_files/csss_images1/f8b73cpsbk.jpg' alt='F8B73CPSBK' title='F8B73CPSBK' /></li>
+			<li class='num1 img slide'> <img src='css_slider_files/csss_images1/fruits.jpg' alt='fruits' title='fruits' /></li>
+			<li class='num2 img slide'> <img src='css_slider_files/csss_images1/ig3cnz7b8l.jpg' alt='IG3CNZ7B8L' title='IG3CNZ7B8L' /></li>
+			<li class='num3 img slide'> <img src='css_slider_files/csss_images1/web_1.jpg' alt='web_1' title='web_1' /></li>
+		</ul><div class="cs_engine"><a href="http://cssslider.com">slideshow in html</a> by cssSlider.com v1.9</div>
 		<div class='cs_description'>
-			<label class='num0'><span class="cs_title"><span class="cs_wrapper">Tital one</span></span></label>
-			<label class='num1'><span class="cs_title"><span class="cs_wrapper">Tital two</span></span></label>
-			<label class='num2'><span class="cs_title"><span class="cs_wrapper">Tital three</span></span></label>
-			<label class='num3'><span class="cs_title"><span class="cs_wrapper">Tital four</span></span></label>
+			<label class='num0'><span class="cs_title"><span class="cs_wrapper">F8B73CPSBK</span></span></label>
+			<label class='num1'><span class="cs_title"><span class="cs_wrapper">fruits</span></span></label>
+			<label class='num2'><span class="cs_title"><span class="cs_wrapper">IG3CNZ7B8L</span></span></label>
+			<label class='num3'><span class="cs_title"><span class="cs_wrapper">web_1</span></span></label>
 		</div>
 		<div class='cs_play_pause'>
 			<label class='cs_play' for='cs_play1'><span><i></i><b></b></span></label>
@@ -77,16 +92,16 @@
 		</div>
 		<div class='cs_bullets'>
 			<label class='num0' for='cs_slide1_0'> <span class='cs_point'></span>
-				<span class='cs_thumb'><img src='cssslider_files/csss_tooltips1/photo1426200830301372615e4ac54.jpg' alt='photo-1426200830301-372615e4ac54' title='photo-1426200830301-372615e4ac54' /></span></label>
+				<span class='cs_thumb'><img src='css_slider_files/csss_tooltips1/f8b73cpsbk.jpg' alt='F8B73CPSBK' title='F8B73CPSBK' /></span></label>
 			<label class='num1' for='cs_slide1_1'> <span class='cs_point'></span>
-				<span class='cs_thumb'><img src='cssslider_files/csss_tooltips1/photo14234836411545411ec9c0ddf.jpg' alt='photo-1423483641154-5411ec9c0ddf' title='photo-1423483641154-5411ec9c0ddf' /></span></label>
+				<span class='cs_thumb'><img src='css_slider_files/csss_tooltips1/fruits.jpg' alt='fruits' title='fruits' /></span></label>
 			<label class='num2' for='cs_slide1_2'> <span class='cs_point'></span>
-				<span class='cs_thumb'><img src='cssslider_files/csss_tooltips1/photo1421977870504378093748ae6.jpg' alt='photo-1421977870504-378093748ae6' title='photo-1421977870504-378093748ae6' /></span></label>
+				<span class='cs_thumb'><img src='css_slider_files/csss_tooltips1/ig3cnz7b8l.jpg' alt='IG3CNZ7B8L' title='IG3CNZ7B8L' /></span></label>
 			<label class='num3' for='cs_slide1_3'> <span class='cs_point'></span>
-				<span class='cs_thumb'><img src='cssslider_files/csss_tooltips1/photo1422310299561e3b8b45d859f.jpg' alt='photo-1422310299561-e3b8b45d859f' title='photo-1422310299561-e3b8b45d859f' /></span></label>
+				<span class='cs_thumb'><img src='css_slider_files/csss_tooltips1/web_1.jpg' alt='web_1' title='web_1' /></span></label>
 		</div>
-	</div>
-	<!-- End of Slider -->
+		</div>
+		<!-- End cssSlider.com -->
 
 	<div class="home_content">
 		<div class="home_content__container">
@@ -150,5 +165,13 @@
 		</div>
 	</footer>
 </body>
-<script type="text/javascript" src="cssslider_files/csss_engine1/gestures.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<script type="text/javascript" src="js/jquery.leanModal.min.js"></script>
+<script type="text/javascript">
+  $("#modal_trigger1").leanModal({top : 200, overlay : 0.6, closeButton: ".modal_close" });
+  $("#modal_trigger2").leanModal({top : 200, overlay : 0.6, closeButton: ".modal_close" });
+</script>
+<script src="https://use.fonticons.com/f733972f.js"></script>
+<script type="text/javascript" src="js/classie.js"></script>
+<script type="text/javascript" src="js/home.js"></script>
 </html>
