Made some changes

--- a/cat_1.html
+++ b/cat_1.html
@@ -4,16 +4,17 @@
 	<title>MeDiat</title>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="This page will help you to make a diate chart as your health." />
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+	<meta name="description" content="This page will help you to make a diate chart as your health."/>
 	<link rel="stylesheet" type="text/css" href="css/normalize.css">
+	<link rel="stylesheet" href="cssslider_files/csss_engine1/style.css">
 	<link rel="stylesheet" type="text/css" href="css/stylesheet.css">
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 	<link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
-	<link rel="stylesheet" type="text/css" href="css/flaticon.css">
 	<link href='http://fonts.googleapis.com/css?family=Armata' rel='stylesheet' type='text/css'>
+	
+	<link rel="stylesheet" type="text/css" href="css/component.css" />
 </head>
-<body>	
+<body>
 	
 	<!-- Navbar code -->
 	<nav class="navbar">
@@ -55,60 +56,164 @@
       </section>
     </div>
   <!-- End to model box -->
-
-	<h1 class="contact_header">Contact Us</h1>
-	<!-- Starting of the contact content -->
-	<form class="form">
-		<div class="form__input-div">
-			<i class="flaticon-profile7"></i> 
-			<input type="text" class="form__input" placeholder="Name">
-		</div>
-		<div class="form__input-div">
-			<i class="flaticon-rounded26"></i>
-			<input type = "text" class="form__input" placeholder="Email">
-		</div>
-		<div class="form__input-div">
-			<i class="flaticon-drawing4"></i>
-			<input type = "text" class="form__input" placeholder="Messsage">
-		</div>
-		<div class="form__input-div">
-			<button class="btn">Submit</button>
-		</div>
-	</form>
-
-	<!-- Starting of contact -->
-	<section class="contact">
-		<div class="contact__container">
-			<ul class="contact__list">
-				<li class="contact__list_member">
-					<i class="icon icon-map-marker" style="font-size:40px"></i>
-					<p class="contact__list_text" style="margin-top:30px;">
-						91,Navadeep Nagar
-					</p>
-					<p class="contact__list_text">
-						Pavanchakki Road
-					</p>
-					<p class="contact__list_text">
-						Nadiad
-					</p>
-				</li>
-				<li class="contact__list_member">
-					<i class="icon icon-envelope-btl" style="font-size:40px"></i>
-					<p class="contact__list_text" style="margin-top:30px;">
-						gandhiswaraj94@gmail.com
-					</p>
-				</li>
-				<li class="contact__list_member">
-					<i class="icon icon-mobile" style="font-size:40px"></i>
-					<p class="contact__list_text" style="margin-top:30px;">Swaraj Gandhi</p>
-					<p class="contact__list_text">+91 9426478112</p>
-					<p></p>
-				</li>
-			</ul>
+	<section class="chart_one" id="one">
+		<div class="chart_one__container">
+			<table>
+				<thead>
+					<tr>
+						<th>Sample ID</th>
+						<th>Reading #1</th>
+						<th>Reading #2</th>
+						<th>Reading #3</th>
+						<th>Reading #4</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<th>Sample #1</th>
+						<td>52</td>
+						<td>40</td>
+						<td>9</td>
+						<td>47</td>
+					</tr>
+					<tr>
+						<th>Sample #2</th>
+						<td>27</td>
+						<td>55</td>
+						<td>97</td>
+						<td>52</td>
+					</tr>
+					<tr>
+						<th>Sample #3</th>
+						<td>36</td>
+						<td>68</td>
+						<td>89</td>
+						<td>78</td>
+					</tr>
+					<tr>
+						<th>Sample #4</th>
+						<td>95</td>
+						<td>46</td>
+						<td>62</td>
+						<td>24</td>
+					</tr>
+					<tr>
+						<th>Sample #5</th>
+						<td>19</td>
+						<td>66</td>
+						<td>31</td>
+						<td>99</td>
+					</tr>
+					<tr>
+						<th>Sample #6</th>
+						<td>57</td>
+						<td>15</td>
+						<td>57</td>
+						<td>9</td>
+					</tr>
+					<tr>
+						<th>Sample #7</th>
+						<td>69</td>
+						<td>46</td>
+						<td>16</td>
+						<td>33</td>
+					</tr>
+					<tr>
+						<th>Sample #8</th>
+						<td>18</td>
+						<td>93</td>
+						<td>84</td>
+						<td>57</td>
+					</tr>
+					<tr>
+						<th>Sample #9</th>
+						<td>92</td>
+						<td>10</td>
+						<td>69</td>
+						<td>35</td>
+					</tr>
+					<tr>
+						<th>Sample #10</th>
+						<td>4</td>
+						<td>87</td>
+						<td>51</td>
+						<td>22</td>
+					</tr>
+					<tr>
+						<th>Sample #11</th>
+						<td>24</td>
+						<td>23</td>
+						<td>85</td>
+						<td>34</td>
+					</tr>
+					<tr>
+						<th>Sample #12</th>
+						<td>92</td>
+						<td>6</td>
+						<td>67</td>
+						<td>65</td>
+					</tr>
+					<tr>
+						<th>Sample #13</th>
+						<td>10</td>
+						<td>77</td>
+						<td>64</td>
+						<td>51</td>
+					</tr>
+					<tr>
+						<th>Sample #14</th>
+						<td>85</td>
+						<td>42</td>
+						<td>90</td>
+						<td>94</td>
+					</tr>
+					<tr>
+						<th>Sample #15</th>
+						<td>34</td>
+						<td>48</td>
+						<td>38</td>
+						<td>21</td>
+					</tr>
+					<tr>
+						<th>Sample #16</th>
+						<td>26</td>
+						<td>72</td>
+						<td>47</td>
+						<td>27</td>
+					</tr>
+					<tr>
+						<th>Sample #17</th>
+						<td>79</td>
+						<td>86</td>
+						<td>85</td>
+						<td>10</td>
+					</tr>
+					<tr>
+						<th>Sample #18</th>
+						<td>39</td>
+						<td>68</td>
+						<td>91</td>
+						<td>71</td>
+					</tr>
+					<tr>
+						<th>Sample #19</th>
+						<td>70</td>
+						<td>4</td>
+						<td>59</td>
+						<td>82</td>
+					</tr>
+					<tr>
+						<th>Sample #20</th>
+						<td>63</td>
+						<td>16</td>
+						<td>62</td>
+						<td>13</td>
+					</tr>
+				</tbody>
+			</table>
 		</div>
 	</section>
-
-	<!-- Starting of the footer-->
+	
 	<footer class="footer">
 		<div class="footer__container">
 			<p class="footer__rights">Copyright 2015 MeDiat | All Rights Reserved | Designed by SKG</p>
@@ -116,7 +221,7 @@
 				<li class="footer__list-element"><a  class="footer__link" href="#">Terms</a></li>
 				<li class="footer__list-element"><a  class="footer__link" href="#">Privacy</a></li>
 				<li class="footer__list-element"><a  class="footer__link" href="#">Copyright</a></li>
-			</ul>			
+			</ul>
 		</div>
 	</footer>
 </body>
@@ -125,5 +230,7 @@
 <script src="https://use.fonticons.com/f733972f.js"></script>
 <script type="text/javascript" src="js/classie.js"></script>
 <script type="text/javascript" src="js/home.js"></script>
-<script src="https://use.fonticons.com/f733972f.js"></script>
+
+<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-throttle-debounce/1.1/jquery.ba-throttle-debounce.min.js"></script>
+
 </html>
