--- a/index.html
+++ b/index.html
@@ -11,6 +11,29 @@
 	<link rel="stylesheet" type="text/css" href="css/stylesheet.css">
 	<link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Armata' rel='stylesheet' type='text/css'>
+	<script type="text/javascript" src="https://www.google.com/jsapi"></script>
+    <script type="text/javascript">
+      google.load("visualization", "1", {packages:["corechart"]});
+      google.setOnLoadCallback(drawChart);
+      function drawChart() {
+        var data = google.visualization.arrayToDataTable([
+          ['Task', 'Hours per Day'],
+          ['Work',     11],
+          ['Eat',      2],
+          ['Commute',  2],
+          ['Watch TV', 2],
+          ['Sleep',    7]
+        ]);
+
+        var options = {
+          title: 'My Daily Activities',
+          pieHole: 0.4,
+        };
+
+        var chart = new google.visualization.PieChart(document.getElementById('donutchart'));
+        chart.draw(data, options);
+      }
+    </script>
 </head>
 <body>
 	
@@ -22,10 +45,10 @@
 				<li class="navbar__list"><a class="navbar__link" href="index.html">Home</a></li>
 				<li class="navbar__list" id="navbar__subhover"><a class="navbar__link" id="navbar_link" href="features.html">Features</a>
 					<ul class="navbar__submenu">
-						<li class="navbar__submenu_list"><a class="navbar__submenu_link" id="modal_trigger1" href="#modal1">Nutrition Calculator</a></li>
-						<li class="navbar__submenu_list"><a class="navbar__submenu_link" id="modal_trigger2" href="#modal2">BMI Calculator</a></li>
-						<li class="navbar__submenu_list"><a class="navbar__submenu_link" href="#">Calorific Value Chart</a></li>
-						<li class="navbar__submenu_list"><a class="navbar__submenu_link" href="#">Balanced Diet Charts</a></li>
+						<li class="navbar__submenu_list"><a class="navbar__submenu_link" id="modal_trigger1" href="#modal1">BMI Calculator</a></li>
+						<li class="navbar__submenu_list"><a class="navbar__submenu_link" href="features.html">Nutrition Calculator</a></li>
+						<li class="navbar__submenu_list"><a class="navbar__submenu_link" href="features.html">Calorific Value Chart</a></li>
+						<li class="navbar__submenu_list"><a class="navbar__submenu_link" href="features.html">Balanced Diet Charts</a></li>
 					</ul>
 				</li>
 				<li class="navbar__list"><a class="navbar__link" href="faq.html">FAQs</a></li>
@@ -38,29 +61,19 @@
 	<!-- Feature 1 link model -->
     <div id="modal1" class="popup" style="display:none;">
       <section class="popup__body">
-        <h1>HELLO FEATURE 2</h1>
-      </section>
-    </div>
-  <!-- End to model box -->
-
-	<!-- Feature 2 link model -->
-    <div id="modal2" class="popup" style="display:none;">
-      <section class="popup__body">
       	<div class="popup__header">
       		BMR Calculator
       	</div>
       	<p class="popup__BMI-details">
-      		BMI (Body Mass Index) is a measurement of body fat based on height and weight that applies to both men and women between the ages of 18 and 65 years.BMI can be used to indicate if you are overweight, obese, underweight or normal. A healthy BMI score is between 20 and 25. A score below 20 indicates that you may be underweight; a value above 25 indicates that you may be overweight.Please remember, however, that this is only one of many possible ways to assess your weight. If you have any concerns about your weight, please discuss them with your physician, who is in a position, unlike this BMI calculator, to address your specific individual situation.
+      		BMI (Body Mass Index) is a measurement of body fat based on height and weight that applies to both men and women between the ages of 18 and 65 years.BMI can be used to indicate if you are overweight, obese, underweight or normal. A healthy BMI score is between 20 and 25. A score below 20 indicates that you may be underweight; a value above 25 indicates that you may be overweight.Please remember, however, that this is only one of many possible ways to assess your weight.
       	</p>
       	<form class="popup__form">
 	      	<input type="text"  class = "popup__input" id="height" placeholder = "Height in cm" autocomplete="off">
-	      	<input type="text" class = "popup__input" id="weight" placeholder = "Weight in kilo" autocomplete="off">
-	      	<br>
-	      	<input type="radio" id="male" name ="Male" value = "male"/> Male
-	      	<input type="radio" id="female" name="Female" value="female" /> Female<br>
-	      	<input type="text" class = "popup__input" id="age" placeholder = "Age in year" autocomplete="off"><br>
-	      	<button id="check">Submit</button>
+	      	<input type="text" class = "popup__input" id="weight" placeholder = "Weight in kilo" autocomplete="off"><br>	      	
+	      	<p class="output"></p>
+	      	<button id="check" class="btn btn--check">Submit</button>
       	</form>
+
       </section>
     </div>
   <!-- End to model box -->
@@ -171,6 +184,17 @@
 			</div>
 		</div>
 	</div>
+	
+	<div class="chart">
+		<div class="chart__container">
+			<h1 class="chart__header">Statistics</h1>
+			<div id="donutchart" style="width: 900px; height: 500px;"></div>
+			<div class="chart__content">
+				
+			</div>
+		</div>
+	</div>
+
 	<footer class="footer">
 		<div class="footer__container">
 			<p class="footer__rights">Copyright 2015 MeDiat | All Rights Reserved | Designed by SKG</p>
@@ -183,11 +207,8 @@
 	</footer>
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<script type="text/javascript" src="js/bootstrap-tooltip.js"></script>
 <script type="text/javascript" src="js/jquery.leanModal.min.js"></script>
-<script type="text/javascript">
-  $("#modal_trigger1").leanModal({top : 200, overlay : 0.6, closeButton: ".modal_close" });
-  $("#modal_trigger2").leanModal({top : 200, overlay : 0.6, closeButton: ".modal_close" });
-</script>
 <script src="https://use.fonticons.com/f733972f.js"></script>
 <script type="text/javascript" src="js/classie.js"></script>
 <script type="text/javascript" src="js/home.js"></script>
