--- a/cat_2.html
+++ b/cat_2.html
@@ -85,47 +85,61 @@
 						<td>Breakfast</td>
 						<td>
 							Roti + Paneer Curry<br> OR <br>
-							Brown bread + Milk<br> OR <br>
-							Upma + Milk<br> OR <br>
-							Hard boiled eggs + Brown bread<br> OR <br>
-							Scrambled Eggs + Brown bread + Skimmed milk
+							Roti + lentil (or tofu) gravy<br> OR <br>
+							Brown bread +Upma + Milk<br> OR <br>
+							Idli + Sambhar + milk<br> OR <br>
 						</td>
 						<td>
 							2 , ½ cup <br><br>
-							2, 1 cup<br><br>
-							1 plate , 1 cup<br><br>
-							2 , 2 <br><br>
-							2 , 1 , 1 cup<br><br>
+							2, ½ cup<br><br>
+							1 , 1 plate , 1 cup<br><br>
+							2 , 1 cup , 1 cup<br><br>
 						</td>
 					</tr>
 					<tr>
 						<th>3</th>
 						<td>Mid-Morning</td>
-						<td>Banana  OR melon OR grapes</td>
-						<td>1 , ½ , 20-25</td>
+						<td>
+							Banana  OR melon OR grapes<br> OR <br>
+							Boiled pulses <br> OR <br>
+							Peanuts OR Almonds OR Melonseeds<br><br>
+						</td>
+						<td>
+							1 , ½ , 20-25<br><br>
+							1 cup<br><br>
+							Fist full<br><br>
+						</td>
 					</tr>
 					<tr>
 						<th>4</th>
 						<td>Lunch</td>
-						<td>Brown rice + Mixed vegetable + Salad + Raita.</td>
-						<td>1 cup , ½ cup , 1 bowl , 1 small bowl.</td>
+						<td>
+							Soup + Brown rice + Mixed vegetable + Salad + Raita.<br> OR <br>
+							Soup + Brown rice + Chicken + Salad + Mixed vegetable
+						</td>
+						<td>
+							1 cup, ½ cup , 1 bowl , 1 small bowl<br><br>
+							1 cup, 1 cup , 100gms , 1 bowl,½ cup.<br><br>
+						</td>
 					</tr>
 					<tr>
 						<th>5</th>
 						<td>Evening</td>
-						<td>Butter Milk</td>
-						<td>1 glass</td>
+						<td>Butter Milk OR Green tea OR Salted lime water  + Oats</td>
+						<td>1 cup + ½ cup</td>
 					</tr>
 					<tr>
 						<th>6</th>
 						<td>Dinner</td>
 						<td>
 							Rotis + Vegetable soup + Salad <br> OR <br>
-							Roti + Fish + Lentils dal +Raita
+							Roti + Fish + Lentils dal +Raita<br><br>
+							Brown bread + Oats<br><br>
 						</td>
 						<td>
 							2 , 1 bowl , 1 bowl<br><br>
 							1 , 50 gms , ½ cup , 1 small bowl<br><br>
+							3 , 1 cup<br><br>
 						</td>
 					</tr>
 				</tbody>
