--- a/cat_3.html
+++ b/cat_3.html
@@ -73,7 +73,7 @@
 						<td>Early morning</td>
 						<td>
 						Luke warm water with lemon<br>
-						Tea( without sugar) + Biscuits
+						Tea or coffee (with cream) + biscuits
 						</td>
 						<td>
 							1 glass<br>
@@ -84,48 +84,68 @@
 						<th>2</th>
 						<td>Breakfast</td>
 						<td>
-							Roti + Paneer Curry<br> OR <br>
-							Brown bread + Milk<br> OR <br>
-							Upma + Milk<br> OR <br>
-							Hard boiled eggs + Brown bread<br> OR <br>
-							Scrambled Eggs + Brown bread + Skimmed milk
+							Parantha  + Lentil gravy<br> OR <br>
+							Scrambled eggs with cheese<br> OR <br>
+							Whole wheat toast + butter<br> OR <br>
+							Idli + Sambhar + milk<br> OR <br>
 						</td>
 						<td>
-							2 , ½ cup <br><br>
-							2, 1 cup<br><br>
-							1 plate , 1 cup<br><br>
-							2 , 2 <br><br>
-							2 , 1 , 1 cup<br><br>
+							2 , 1 cup <br><br>
+							2<br><br>
+							2<br><br>
+							2 , 1 cup , 1 cup<br><br>
 						</td>
 					</tr>
 					<tr>
 						<th>3</th>
 						<td>Mid-Morning</td>
-						<td>Banana  OR melon OR grapes</td>
-						<td>1 , ½ , 20-25</td>
+						<td>
+							Banana  OR melon OR grapes<br> OR <br>
+							Yogurt + wheat crackers <br> OR <br>
+							Peanuts OR Almonds OR Melonseeds<br><br>
+						</td>
+						<td>
+							1 , ½ , 20-25<br><br>
+							1 cup , 5<br><br>
+							Fist full<br><br>
+						</td>
 					</tr>
 					<tr>
 						<th>4</th>
 						<td>Lunch</td>
-						<td>Brown rice + Mixed vegetable + Salad + Raita.</td>
-						<td>1 cup , ½ cup , 1 bowl , 1 small bowl.</td>
+						<td>
+							Soup +roti + Brown rice + Mixed vegetable + Salad + Raita.<br> OR <br>
+							Chicken sandwich on whole wheat with tomato and lettuce
+						</td>
+						<td>
+							1 cup, 1, 1 cup , ½ cup , 1 bowl , 1 small bowl.<br><br>
+							1<br><br>
+						</td>
 					</tr>
 					<tr>
 						<th>5</th>
 						<td>Evening</td>
-						<td>Butter Milk</td>
-						<td>1 glass</td>
+						<td>
+							Butter Milk OR Green tea OR Salted lime water  + Oats<br><br>
+							Brown bread cheese sandwich
+						</td>
+						<td>
+							1 cup + ½ cup<br><br>
+							1
+						</td>
 					</tr>
 					<tr>
 						<th>6</th>
 						<td>Dinner</td>
 						<td>
-							Rotis + Vegetable soup + Salad <br> OR <br>
-							Roti + Fish + Lentils dal +Raita
+							Rotis + Vegetable curry + Salad <br> OR <br>
+							Boiled vegetables +fruit yogurt<br><br>
+							Roti + Chicken curry + salad<br><br>
 						</td>
 						<td>
 							2 , 1 bowl , 1 bowl<br><br>
-							1 , 50 gms , ½ cup , 1 small bowl<br><br>
+							1 cup , 1 cup<br><br>
+							2 , 1 bowl , 1 bowl<br><br>
 						</td>
 					</tr>
 				</tbody>
