--- a/cat_4.html
+++ b/cat_4.html
@@ -73,7 +73,7 @@
 						<td>Early morning</td>
 						<td>
 						Luke warm water with lemon<br>
-						Tea( without sugar) + Biscuits
+						Tea or coffee (with cream) + biscuits
 						</td>
 						<td>
 							1 glass<br>
@@ -84,48 +84,67 @@
 						<th>2</th>
 						<td>Breakfast</td>
 						<td>
-							Roti + Paneer Curry<br> OR <br>
-							Brown bread + Milk<br> OR <br>
-							Upma + Milk<br> OR <br>
-							Hard boiled eggs + Brown bread<br> OR <br>
-							Scrambled Eggs + Brown bread + Skimmed milk
+							Corn flakes with sliced bananas +  whole milk + Fruit juice<br> OR <br>
+							Boiled eggs + Fruit juice + Whole wheat toast  (or parantha)<br> OR <br>
+							Scrambled Eggs with cheese + Brown bread + whole milk
 						</td>
 						<td>
-							2 , ½ cup <br><br>
-							2, 1 cup<br><br>
-							1 plate , 1 cup<br><br>
-							2 , 2 <br><br>
-							2 , 1 , 1 cup<br><br>
+							1 bowl , 1 glass<br><br>
+							2 , 1 glass , 2<br><br>
+							2 , 2 , 1 glass<br><br>
 						</td>
 					</tr>
 					<tr>
 						<th>3</th>
 						<td>Mid-Morning</td>
-						<td>Banana  OR melon OR grapes</td>
-						<td>1 , ½ , 20-25</td>
+						<td>
+							Banana  OR melon OR grapes<br> OR <br>
+							Cottage cheese medium cookedwith salad.<br> OR <br>
+							Dried fruits<br><br>
+						</td>
+						<td>
+							1 , ½ , 20-25<br><br>
+							1 bowl<br><br>
+							1 small bowl<br><br>
+						</td>
 					</tr>
 					<tr>
 						<th>4</th>
 						<td>Lunch</td>
-						<td>Brown rice + Mixed vegetable + Salad + Raita.</td>
-						<td>1 cup , ½ cup , 1 bowl , 1 small bowl.</td>
+						<td>
+							Roti + Mixed vegetable (or panner) + Lentil gravy + Salad + Raita.<br> OR <br>
+							Roti + Brown rice + Chicken + Salad + Mixed vegetable.<br> OR <br>
+							Tuna sandwich with  cheese (or mayonnaise dressing)  + Fruit Juice
+						</td>
+						<td>
+							2-3, 1 cup, ½ cups , 1 bowl , 1 small bowl.<br><br>
+							2 , 1 bowl , 200gms , 1 bowl, ½ cup.<br><br>
+							1 , 1 glass<br><br>
+							1<br><br>
+						</td>
 					</tr>
 					<tr>
 						<th>5</th>
 						<td>Evening</td>
-						<td>Butter Milk</td>
-						<td>1 glass</td>
+						<td>
+							Fruit salad<br><br>
+							Mashed potato salad
+						</td>
+						<td>
+							1 bowl<br><br>
+							1 bowl<br><br>
+						</td>
 					</tr>
 					<tr>
 						<th>6</th>
 						<td>Dinner</td>
 						<td>
-							Rotis + Vegetable soup + Salad <br> OR <br>
-							Roti + Fish + Lentils dal +Raita
+							Chicken gravy + Roti + low calorie yogurt ( or low calorie desert )<br> OR <br>
+							Mashed potato  with gravy + Steamed vegetables + low calorie yogurt ( or low calorie desert )<br><br>
 						</td>
 						<td>
-							2 , 1 bowl , 1 bowl<br><br>
-							1 , 50 gms , ½ cup , 1 small bowl<br><br>
+							1 bowl ,2 , 1 portion<br><br>
+							1 bowl + 1 bowl+ 1 portion<br><br>
 						</td>
 					</tr>
 				</tbody>
