--- a/blog_1.html
+++ b/blog_1.html
@@ -4,15 +4,14 @@
 	<title>MeDiat</title>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="This page will help you to make a diate chart as your health."/>
+	<meta name="description" content="This page will help you to make a diate chart as your health." />
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<link rel="stylesheet" type="text/css" href="css/normalize.css">
-	<link rel="stylesheet" href="cssslider_files/csss_engine1/style.css">
+	<link rel="stylesheet" href="css_slider_files/csss_engine1/style.css">
 	<link rel="stylesheet" type="text/css" href="css/stylesheet.css">
-	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 	<link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Armata' rel='stylesheet' type='text/css'>
-	
-	<link rel="stylesheet" type="text/css" href="css/component.css" />
+	<script type="text/javascript" src="https://www.google.com/jsapi"></script>
 </head>
 <body>
 	
@@ -41,7 +40,7 @@
     <div id="modal1" class="popup" style="display:none;">
       <section class="popup__body">
       	<div class="popup__header">
-      		BMR Calculator
+      		BMI Calculator
       	</div>
       	<p class="popup__BMI-details">
       		BMI (Body Mass Index) is a measurement of body fat based on height and weight that applies to both men and women between the ages of 18 and 65 years.BMI can be used to indicate if you are overweight, obese, underweight or normal. A healthy BMI score is between 20 and 25. A score below 20 indicates that you may be underweight; a value above 25 indicates that you may be overweight.Please remember, however, that this is only one of many possible ways to assess your weight.
@@ -52,104 +51,16 @@
 	      	<p class="output"></p>
 	      	<button id="check" class="btn btn--check">Submit</button>
       	</form>
-
       </section>
     </div>
   <!-- End to model box -->
-	<section class="table">
-		<div class="table__container">
-			<table>
-				<thead>
-					<tr>
-						<th>Index No.</th>
-						<th>Timings</th>
-						<th>Food Item</th>
-						<th>Quantity</th>
-					</tr>
-				</thead>
-				<tbody>
-					<tr>
-						<th>1</th>
-						<td>Early morning</td>
-						<td>
-						Luke warm water with lemon<br>
-						Tea or coffee (with cream) + biscuits
-						</td>
-						<td>
-							1 glass<br>
-							1 cup, 2 Biscuits
-						</td>
-					</tr>
-					<tr>
-						<th>2</th>
-						<td>Breakfast</td>
-						<td>
-							Corn flakes with sliced bananas +  whole milk + Fruit juice<br> OR <br>
-							Whole grain toast with jelly and butter +  tea or coffee +cup of orange juice.<br> OR <br>
-							Scrambled Eggs with cheese + Brown bread + whole milk
-						</td>
-						<td>
-							1 bowl , 1 glass<br><br>
-							2 , 1 cup , 1 glass<br><br>
-							2 , 2 , 1 glass<br><br>
-						</td>
-					</tr>
-					<tr>
-						<th>3</th>
-						<td>Mid-Morning</td>
-						<td>
-							Whole grain crackers +  dried fruits<br> OR <br>
-							Cottage cheese medium cookedwith salad.<br> OR <br>
-							Peanut butter toast  + fruitjuice<br><br>
-						</td>
-						<td>
-							5 , handful<br><br>
-							1 bowl<br><br>
-							2  , 1 glass<br><br>
-						</td>
-					</tr>
-					<tr>
-						<th>4</th>
-						<td>Lunch</td>
-						<td>
-							Roti + Mixed vegetable (or panner) + Lentil gravy + Salad + Raita.<br> OR <br>
-							Chicken breast +  salad + whole grain roti + Juice<br> OR <br>
-							Vegetable soup+ mozzarella cheese+ greens salad with olive oil and lemon juice+ yogurt + whole wheat bread (or roti)
-						</td>
-						<td>
-							2-3, 1 cup, ½ cups , 1 bowl , 1 small bowl.<br><br>
-							2 piece , 1 bowl, 2-3, 1 glass<br><br>
-							1  bowl , 20-50 gms, 1bowl, 1, 2<br><br>
-							1<br><br>
-						</td>
-					</tr>
-					<tr>
-						<th>5</th>
-						<td>Evening</td>
-						<td>
-							Apple + crackers<br><br>
-							Mashed potato salad
-						</td>
-						<td>
-							1 , 5<br><br>
-							1 bowl<br><br>
-						</td>
-					</tr>
-					<tr>
-						<th>6</th>
-						<td>Dinner</td>
-						<td>
-							Whole grain pasta  with cheese + fresh and frozen vegetables + green salad  + low calorie<br><br>
-						</td>
-						<td>
-							1 bowl , 1 bowl , 1 bowl , 1 portion.<br><br>
-						</td>
-					</tr>
-				</tbody>
-			</table>
-		</div>
-	</section>
-	
+
+  <section class="blog">
+  	<div class="">
+  		
+  	</div>
+  </section>
+
 	<footer class="footer">
 		<div class="footer__container">
 			<p class="footer__rights">Copyright 2015 MeDiat | All Rights Reserved | Designed by SKG</p>
@@ -162,11 +73,9 @@
 	</footer>
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+<script type="text/javascript" src="js/bootstrap-tooltip.js"></script>
 <script type="text/javascript" src="js/jquery.leanModal.min.js"></script>
 <script src="https://use.fonticons.com/f733972f.js"></script>
 <script type="text/javascript" src="js/classie.js"></script>
 <script type="text/javascript" src="js/home.js"></script>
-
-<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-throttle-debounce/1.1/jquery.ba-throttle-debounce.min.js"></script>
-
 </html>
