--- a/faq.html
+++ b/faq.html
@@ -42,7 +42,7 @@
           BMR Calculator
         </div>
         <p class="popup__BMI-details">
-          BMI (Body Mass Index) is a measurement of body fat based on height and weight that applies to both men and women between the ages of 18 and 65 years.BMI can be used to indicate if you are overweight, obese, underweight or normal. A healthy BMI score is between 20 and 25. A score below 20 indicates that you may be underweight; a value above 25 indicates that you may be overweight.Please remember, however, that this is only one of many possible ways to assess your weight.
+          BMI (Body Mass Index) is a measurement of body fat based on height and weight that applies to both men and women between the ages of 18 and 65 years.BMI can be used to indicate if you are overweight, obese, underweight or normal. A healthy BMI score is between 20 and 25.
         </p>
         <form class="popup__form">
           <input type="text"  class = "popup__input" id="height" placeholder = "Height in cm" autocomplete="off">
