--- a/contactus.html
+++ b/contactus.html
@@ -25,7 +25,7 @@
 					<ul class="navbar__submenu">
 						<li class="navbar__submenu_list"><a class="navbar__submenu_link" id="modal_trigger1" href="#modal1">BMI Calculator</a></li>
 						<li class="navbar__submenu_list"><a class="navbar__submenu_link" href="features.html">Nutrition Calculator</a></li>
-						<li class="navbar__submenu_list"><a class="navbar__submenu_link" href="features.html">Calorific Value Chart</a></li>
+						<li class="navbar__submenu_list"><a class="navbar__submenu_link" href="facts.html">Facts</a></li>
 						<li class="navbar__submenu_list"><a class="navbar__submenu_link" href="features.html">Balanced Diet Charts</a></li>
 					</ul>
 				</li>
