--- a/features.html
+++ b/features.html
@@ -24,7 +24,7 @@
 					<ul class="navbar__submenu">
 						<li class="navbar__submenu_list"><a class="navbar__submenu_link" id="modal_trigger1" href="#modal1">BMI Calculator</a></li>
 						<li class="navbar__submenu_list"><a class="navbar__submenu_link" href="features.html">Nutrition Calculator</a></li>
-						<li class="navbar__submenu_list"><a class="navbar__submenu_link" href="features.html">Calorific Value Chart</a></li>
+						<li class="navbar__submenu_list"><a class="navbar__submenu_link" href="facts.html">Facts</a></li>
 						<li class="navbar__submenu_list"><a class="navbar__submenu_link" href="features.html">Balanced Diet Charts</a></li>
 					</ul>
 				</li>
@@ -94,7 +94,7 @@
 					</form>
 				</div>
 			</section>
-
+			<h1 align="center" style="color:green;"><a id="anc" href=""></a></h1>
 			
 			<section class="chart_one" id="one">
 				<div class="chart_one__container">
