--- a/index.html
+++ b/index.html
@@ -12,28 +12,6 @@
 	<link href='http://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Armata' rel='stylesheet' type='text/css'>
 	<script type="text/javascript" src="https://www.google.com/jsapi"></script>
-    <script type="text/javascript">
-      google.load("visualization", "1", {packages:["corechart"]});
-      google.setOnLoadCallback(drawChart);
-      function drawChart() {
-        var data = google.visualization.arrayToDataTable([
-          ['Task', 'Hours per Day'],
-          ['Work',     11],
-          ['Eat',      2],
-          ['Commute',  2],
-          ['Watch TV', 2],
-          ['Sleep',    7]
-        ]);
-
-        var options = {
-          title: 'My Daily Activities',
-          pieHole: 0.4,
-        };
-
-        var chart = new google.visualization.PieChart(document.getElementById('donutchart'));
-        chart.draw(data, options);
-      }
-    </script>
 </head>
 <body>
 	
@@ -47,7 +25,7 @@
 					<ul class="navbar__submenu">
 						<li class="navbar__submenu_list"><a class="navbar__submenu_link" id="modal_trigger1" href="#modal1">BMI Calculator</a></li>
 						<li class="navbar__submenu_list"><a class="navbar__submenu_link" href="features.html">Nutrition Calculator</a></li>
-						<li class="navbar__submenu_list"><a class="navbar__submenu_link" href="features.html">Calorific Value Chart</a></li>
+						<li class="navbar__submenu_list"><a class="navbar__submenu_link" href="facts.html">Facts</a></li>
 						<li class="navbar__submenu_list"><a class="navbar__submenu_link" href="features.html">Balanced Diet Charts</a></li>
 					</ul>
 				</li>
@@ -136,7 +114,7 @@
 	<div class="home_content">
 		<div class="home_content__container">
 			<div class="home_content__header">
-				Tital one
+				Articles
 			</div>
 			<div class="home_cotent__feature">
 				<div class="home_content__feature-text">
@@ -171,16 +149,6 @@
 				<div class="home_content__feature-img image3">
 					
 				</div>
-			</div>
-		</div>
-	</div>
-	
-	<div class="chart">
-		<div class="chart__container">
-			<h1 class="chart__header">Statistics</h1>
-			<div id="donutchart" style="width: 900px; height: 500px;"></div>
-			<div class="chart__content">
-				
 			</div>
 		</div>
 	</div>
