--- a/blog_1.html
+++ b/blog_1.html
@@ -57,10 +57,67 @@
 
   <section class="blog">
   	<div class="blog__container">
-  		
+  		<h1 class="blog__header">Green Leafy Vegetable and Diet</h1>
   	</div>
   </section>
 
+  <section class="blog_content">
+  	<div class="blog_content__container">
+  		<div class="blog__content">
+				<ul>
+					<li>Normal diet, to be wholesome and tasty, should include fresh vegetables and fruits, which are store houses of micronutrients.</li>
+					<li>Vegetables/fruits are rich sources of micronutrients.</li>
+					<li>Fruits and vegetables also provide phytonutrients and fibre which are of vital health significance</li>
+					<li>They help in prevention of micronutrient malnutrition and certain chronic diseases such as cardiovascular diseases, cataract and cancer.</li>
+					<li>Fresh fruits are nutritionally superior to fruit juices.</li>
+				</ul>
+				<p class="blog__question">
+					Why should we eat vegetables/fruits ?
+				</p>
+				<p>
+					Fresh Vegetables and fruits are rich sources of micronutrients and macronutrients (Annexure 2). The micronutrients present are minerals (like iron and calcium) and vitamins (like vitamin C, folic acid, B complex vitamins and carotenoids) whereas, the macronutrients present are complex carbohydrates/fibre. They contain abundant amounts of iron, calcium, vitamin C, folic acid, carotenoids (precursors of vitamin A) and phytochemicals. Some vegetables and fruits provide very low calories (Annexure 6), whereas some others such as potato, sweet potato, tapioca and yam as well as fruits like banana are rich in starch which provide energy in good amount. Therefore, vegetables and fruits can be used to increase or decrease calories in our diet.
+				</p>
+				<p>
+					Function of Various Nutrients
+
+					Iron is an essential element necessary for the formation of haemoglobin, the red pigment present in the red cells of blood. Haemoglobin plays an important role in the transport of oxygen to the tissues. Reduction in haemoglobin in blood leads to
+					anaemia, a condition characterised by paleness and easy fatigue and increased susceptibility to infections. Iron is available in plenty in green leafy vegetables. But
+					the absorption of iron is limited. Vitamin C rich foods must be consumed daily to improve iron absorption.
+
+					Vitamin A
+
+					This fat-soluble vitamin is necessary for clear vision in dim light, and for maintaining the integrity of epithelial tissues. In vitamin A deficiency, the white of the eye (conjunctiva) loses its lustre and becomes dry. In severe vitamin A deficiency,
+					the black area of the eye (cornea) gets necrosed, leading to irreversible blindness in young children. Vitamin A also has a role in maintaining resistance of the body to common infections. Carotenoids are plentiful in fruits and vegetables that are green or deep yellow/orange in colour, such as green leafy vegetables, carrots, tomatoes, sweet potatoes, papaya, mango etc.
+					Vitamin C
+					Vitamin C is an essential nutrient required for healthy bones and teeth. It also promotes iron absorption. Vitamin C deficiency is characterised by weakness, bleeding gums and defective bone growth. Vitamin C is abundantly available in
+					fresh amla, citrus fruits, guava, banana and certain vegetables such as tomatoes. However, it is very susceptible to destruction by atmospheric oxidation. It is for this
+					reason that when vegetables become dry and stale or cut and exposed to air most of the vitamin C originally present in destroyed.
+
+					Calories
+
+					Many of the vegetables and fruits have low calories (Annexure 7). Large intake of low calorie vegetables and fruits can help in reducing calories in diet and help in obesity management. On the other hand vegetables like colocasia, potato, tapioca,
+					yam, sweet potato and fruits like banana, avocado pear (215 Kcal) and mahua (111 Kcal) have more than 100 kcal per 100gram.
+
+					Phytonutrients
+
+					Vegetables provide phytochemicals and considerable health significance to the human body. Among these, dietary fibre, antioxidants, and other bio-active constituents require special mention. These special factors are required for delaying ageing and preventing the processes which lead to diseases such as cataract,cardio-vascular diseases, diabetes and cancer.
+
+					Dietary Fibre
+
+					Dietary fibre delays the intestinal transit of the food consumed. Dietary fibre is important for proper bowel function, to reduce chronic constipation, diverticular disease, haemorrhoids coronary heart diseases, diabetes and obesity. They also
+					reduce plasma cholesterol. The protective role of dietary fibre against colon cancer has long been recognised.
+					Antioxidants
+
+					In the recent past, the role of vegetables and fruits as sources of antioxidants has been receiving considerable attention. Antioxidants restrict the damage that reactive oxygen free radicals can cause to the cell and cellular components. They
+					are of primary biological value in giving protection from certain diseases. Some of the diseases that have their origin in deleterious free radical reactions are atherosclerosis, cancer, inflammatory joint diseases, asthma, diabetes etc. Raw
+					and fresh vegetables like green leafy vegetables, carrots, fresh fruits including citrus and tomatoes have been identified as good sources of antioxidants (free radicalscavengers). The nutrients vitamin C and carotenoids that are present in these
+					vegetables are also potential antioxidants. Different coloured vegetable provide different antioxidants like orange coloured provides -carotene, red provide lycopene, deep red provides betalines, blue and purple provide anthocynins.
+				</p>
+		  </div>
+  	</div>
+  </section>
+
+  
 	<footer class="footer">
 		<div class="footer__container">
 			<p class="footer__rights">Copyright 2015 MeDiat | All Rights Reserved | Designed by SKG</p>
