--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
 			<label class='num2'><span class="cs_title"><span class="cs_wrapper">IG3CNZ7B8L</span></span></label>
 			<label class='num3'><span class="cs_title"><span class="cs_wrapper">web_1</span></span></label>
 		</div>
+		<!--
 		<div class='cs_play_pause'>
 			<label class='cs_play' for='cs_play1'><span><i></i><b></b></span></label>
 			<label class='cs_pause num0' for='cs_pause1_0'><span><i></i><b></b></span></label>
@@ -86,6 +87,7 @@
 			<label class='cs_pause num2' for='cs_pause1_2'><span><i></i><b></b></span></label>
 			<label class='cs_pause num3' for='cs_pause1_3'><span><i></i><b></b></span></label>
 			</div>
+			-->
 		<div class='cs_arrowprev'>
 			<label class='num0' for='cs_slide1_0'><span><i></i><b></b></span></label>
 			<label class='num1' for='cs_slide1_1'><span><i></i><b></b></span></label>
@@ -120,7 +122,7 @@
 				<div class="home_content__feature-text">
 					<p class="home_content__feature-text-header">Green Leafy Vegetable and Diet</p>
 					<p>
-						Fresh Vegetables and fruits are rich sources of micronutrients and macronutrients (Annexure 2). The micronutrients present are minerals (like iron and calcium) and vitamins (like vitamin C, folic acid, B complex vitamins and carotenoids) whereas, the macronutrients present are complex carbohydrates/fibre.<a href="#" style="color:blue;">  read more...</a>
+						Fresh Vegetables and fruits are rich sources of micronutrients and macronutrients (Annexure 2). The micronutrients present are minerals (like iron and calcium) and vitamins (like vitamin C, folic acid, B complex vitamins and carotenoids) whereas, the macronutrients present are complex carbohydrates/fibre.<a href="blog_1.html" style="color:blue;">  read more...</a>
 					</p>
 				</div>
 				<div class="home_content__feature-img image1">
@@ -134,7 +136,7 @@
 				<div class="home_content__feature-text">
 					<p class="home_content__feature-text-header">Facts on Processed Food and Sugar</p>
 					<p>
-						Foods that are subjected to technological modifications either for preservation or for converting into ready-to-use/eat foods, eliminating laborious household procedures, are called “processed foods”. Some of the examples are ready mixes,  <a href="#" style="color:blue;">read more...</a>
+						Foods that are subjected to technological modifications either for preservation or for converting into ready-to-use/eat foods, eliminating laborious household procedures, are called “processed foods”. Some of the examples are ready mixes,  <a href="blog_1.html" style="color:blue;">read more...</a>
 					</p>
 				</div>
 			</div>
@@ -143,7 +145,7 @@
 					<p class="home_content__feature-text-header">Physical Activity and Body Weight</p>
 					<p>
 						It is recommended at least 45 minutes of physical activity of
-						moderate-intensity for at least 5 days in a week. This amount of physical activity may reduce the risk some chronic diseases. <a href="#" style="color:blue;"> read more ...</a>
+						moderate-intensity for at least 5 days in a week. This amount of physical activity may reduce the risk some chronic diseases. <a href="blog_1.html" style="color:blue;"> read more ...</a>
 					</p>
 				</div>
 				<div class="home_content__feature-img image3">
